--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
   "author": "ghendersonnc",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
     "ejs": "^3.1.6",
     "nodemon": "^2.0.12",
-    "request": "^2.88.2",
-    "xmlhttprequest": "^1.8.0"
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "express": "^4.17.1"
