--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "nodemon": "^2.0.12",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "express": "^4.17.1"
